# BTagent

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
agents/: pyproject.toml
agents/btagent_agents/: __init__.py
agents/btagent_agents/context/: __init__.py  budget.py  cascade.py
agents/btagent_agents/coordination/: __init__.py  graph.py
agents/btagent_agents/enrichment/: __init__.py  graph.py
agents/btagent_agents/events/: __init__.py  emitter.py  types.py
agents/btagent_agents/hooks/: __init__.py  _redaction.py  _tlp_egress.py  base.py  classification_hook.py  event_emitter_hook.py  evidence_chain_hook.py  hitl_hook.py  prompt_budget_hook.py  scope_enforcement_hook.py
agents/btagent_agents/knowledge/: __init__.py  graph.py
agents/btagent_agents/llm/: __init__.py  client.py  cost_calculator.py  router.py
agents/btagent_agents/mcp/: __init__.py  adapters.py  config.py  discovery.py  manifests.py  ocsf.py  policy.py  registry.py  transports.py
agents/btagent_agents/middleware/: __init__.py  llm_router.py
agents/btagent_agents/mitigation/: __init__.py  graph.py
agents/btagent_agents/mitre/: __init__.py  mapper.py
agents/btagent_agents/orchestrator/: __init__.py  edges.py  engine_runner.py  graph.py  knowledge_client.py  knowledge_injector.py  nodes.py  state.py
agents/btagent_agents/playbook/: __init__.py  compiler.py  executor.py  state.py
agents/btagent_agents/plugins/: __init__.py  base.py
agents/btagent_agents/report/: __init__.py  graph.py
agents/btagent_agents/templates/: __init__.py  phishing.yaml  ransomware.yaml  unauthorized_access.yaml
agents/tests/: conftest.py  test_agentic_hunt.py  test_agentic_hunt_runner.py  test_alert_triage.py  test_bulk_mitigation.py  test_canary_connector.py  test_cloud_hunt.py  test_cloud_hunt_runner.py  test_cloudtrail_connector.py  test_cortex_connector.py  test_deception_correlator.py  test_deception_hunt.py  test_deception_hunt_runner.py  test_defender_endpoint_connector.py  test_defender_o365_connector.py  test_detection_validation.py  test_duo_connector.py  test_email_hunt.py  test_email_hunt_runner.py  test_engine_integration_smoke.py  test_enrich_node.py  test_entra_connector.py  test_gcp_connector.py  test_git_connector.py  test_gws_connector.py  test_hitl_integration.py  test_hunt_pack_runner.py  test_hunter_plugin.py  test_identity_hunt.py  test_jira_connector.py  test_lineage_graph.py  test_litellm_client.py  test_llm_router_middleware.py  test_mcp_hardening.py  test_mcp_ocsf.py  test_mcp_policy.py  test_mcp_server_manifests.py  test_mimecast_connector.py  test_ndr_correlator.py  test_ndr_hunt.py  (+23 more)
backend/: alembic.ini  pyproject.toml
backend/btagent_backend/: config.py  main.py
backend/btagent_backend/api/: deps.py
backend/btagent_backend/auth/: _role_map.py  bootstrap.py  cookies.py  jwt.py  mfa.py  middleware.py  oidc.py  rbac.py  revocation.py  saml.py  scoping.py
backend/btagent_backend/db/: engine.py  models.py  models_behavioral.py  models_connector.py  models_cti.py  models_hunt.py  models_identity.py  models_knowledge.py  models_mfa.py  models_mitre.py  models_pattern.py  models_playbook.py  models_validation.py  models_workflow.py
backend/btagent_backend/middleware/: rate_limiter.py  request_id.py  security_headers.py
backend/btagent_backend/observability/: __init__.py  logging.py  metrics.py  otel.py
backend/btagent_backend/scheduler/: __init__.py  jobs.py  worker.py
backend/btagent_backend/security/: rate_limiter.py
backend/btagent_backend/services/: agentic_hunt_run_service.py  all_hunts_run_service.py  audit_trail.py  behavioral_intent_service.py  behavioral_service.py  chunking_service.py  cloud_hunt_run_service.py  connector_catalog.py  connector_credential_service.py  cti_detection_service.py  data_retention.py  (+41 more)
backend/migrations/: env.py
backend/tests/: conftest.py  helpers.py  test_admin_bootstrap.py  test_agentic_hunt_ingest.py  test_all_hunts_ingest.py  test_audit_api.py  test_audit_trail.py  test_auth.py  test_behavioral_api.py  test_behavioral_golden.py  test_behavioral_intent.py  test_behavioral_logic.py  test_behavioral_service.py  test_cloud_hunt_ingest.py  test_connectors_api.py  test_cookie_auth.py  test_cors_config.py  test_credentials_api.py  test_cti_bundle_store.py  test_cti_proposal_persistence.py  test_cti_to_detection.py  test_deception_hunt_ingest.py  test_email_hunt_api.py  test_email_hunt_ingest.py  test_engine_event_adapter.py  test_handover_api.py  test_health.py  test_hitl_notifier.py  test_hunt_findings_api.py  test_hunt_notifier.py  test_hunt_pack_run_integration.py  test_hunt_plan_execution.py  test_hunt_plan_persistence.py  test_hunt_scheduler.py  test_hunt_triage_logic.py  test_hunt_triage_phase_a.py  test_hunt_triage_phase_c.py  test_hunt_verticals_catalog.py  test_huntpack_logic.py  test_huntpack_persist.py  (+49 more)
engine/: README.md  pyproject.toml
engine/btagent_engine/: __init__.py  lineage.py  llm.py
engine/tests/: conftest.py  test_abuseipdb.py  test_compiler.py  test_compiler_steps.py  test_connector_manifest_coverage.py  test_connector_manifest_virustotal.py  test_context_cascade.py  test_correlation_workbench.py  test_coverage_gap.py  test_crowdstrike.py  test_data_mitre_mapper.py  test_data_ocsf_mapper.py  test_data_transform.py  test_elastic.py  test_enrichment_dedup_iocs.py  test_enrichment_extract_iocs.py  test_enrichment_score_severity.py  test_greynoise.py  test_hunt_package.py  test_hunt_pipeline_integration.py  test_hunting_pack.py  test_hunting_runner.py  test_hunting_transpile.py  test_hypothesis_gen.py  test_ioc_extractor.py  test_knowledge_search.py  test_knowledge_upsert.py  test_llm_call.py  test_llm_client_injection.py  test_middleware_classification.py  test_middleware_connector_policy.py  test_middleware_event_emitter.py  test_middleware_evidence_chain.py  test_middleware_hitl.py  test_middleware_ocsf_normalize.py  test_middleware_prompt_budget.py  test_middleware_scope.py  test_misp.py  test_nl_query.py  test_node.py  (+19 more)
shared/: pyproject.toml
(+849 files in other folders)
