[project]
name = "btagent-agents"
version = "0.1.0"
description = "BTagent LangGraph agent engine — orchestrator, plugins, hooks, MCP, LLM routing"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.6",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "litellm>=1.80.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.0",
    "redis>=5.0.0",
    "btagent-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["btagent_agents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "B904", "F841", "B007", "F401", "B905", "B017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
