[project]
name = "btagent-agents"
version = "0.1.0"
description = "BTagent LangGraph agent engine — orchestrator, plugins, hooks, MCP, LLM routing"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.6",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=1.4.0",
    # ChatLiteLLM moved out of langchain-community (sunset; removed it in
    # 0.4.2) into the standalone langchain-litellm package.
    "langchain-litellm>=0.6.0",
    "litellm>=1.80.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.0",
    # Hunt Pack Runner (#112): Sigma -> multi-backend transpile.
    "pysigma>=0.11.0",
    "pysigma-backend-splunk>=1.0.0",
    "pysigma-backend-elasticsearch>=1.0.0",
    "pysigma-backend-kusto>=0.4.0",
    "pysigma-backend-crowdstrike>=1.0.0",
    "redis>=5.0.0",
    "btagent-shared",
    # Phase 1 Sprint 2 introduced the workflow engine as a sibling package.
    # ``orchestrator/templates/__init__.py`` and the LLM-router middleware
    # both import from it. Listed here so production installs pull it in
    # automatically (not just CI / dev test runs).
    "btagent-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["btagent_agents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "B904", "F841", "B007", "F401", "B905", "B017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.uv.sources]
# Workspace path-deps. Without these, ``uv pip install -e agents/`` would
# try to fetch ``btagent-shared`` and ``btagent-engine`` from PyPI (where
# they don't exist) instead of using the sibling source trees. Mirrors
# the pattern engine/pyproject.toml uses for ``btagent-shared``.
btagent-shared = { path = "../shared", editable = true }
btagent-engine = { path = "../engine", editable = true }
