[project]
name = "btagent-backend"
version = "0.1.0"
description = "BTagent FastAPI backend — API, WebSocket hub, auth, DB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pgvector>=0.4.2",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.0",
    "btagent-shared",
    "btagent-engine",
    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "prometheus_client>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.10",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["btagent_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "B904", "F841", "B007", "F401", "B905", "B017"]  # FastAPI Depends(), line length, reraise, unused vars

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
