[project]
name = "btagent-backend"
version = "0.1.0"
description = "BTagent FastAPI backend — API, WebSocket hub, auth, DB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pgvector>=0.4.2",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "arq>=0.26.0",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.0",
    # MFA (#144): TOTP + Fernet secret-at-rest. cryptography is already pulled
    # in transitively by python-jose[cryptography]; pinned explicitly here
    # because auth/mfa.py imports cryptography.fernet directly.
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",
    # Generic OIDC SSO (#144 Phase 1b): pure-Python OIDC + JOSE (JWKS / ID-token
    # signature verification via authlib.jose). Pulls ``cryptography`` (already
    # pinned above); no system deps.
    "authlib>=1.3.0",
    # PDF report export (#145) — reportlab ships pure-Python wheels (no system
    # libs), unlike weasyprint/wkhtmltopdf which need cairo/pango/wkhtmltopdf.
    "reportlab>=4.2.0",
    "btagent-shared",
    "btagent-engine",
    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "prometheus_client>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.10",
    "aiosqlite>=0.20.0",
]
# SAML 2.0 SSO (#170) — optional extra. Pulls pysaml2 (which shells out to the
# ``xmlsec1`` binary; the SAML-enabled Docker image + the ``saml-tests`` CI job
# install ``libxmlsec1-dev``/``libxml2-dev``). The default slim image and
# ``backend-tests`` job deliberately do NOT install this, and ``auth/saml.py``
# lazy-imports pysaml2 so the core boots without it.
saml = [
    "pysaml2>=7.5.0",
    "defusedxml>=0.7.1",
    # pysaml2 imports ``OpenSSL.crypto``; pyOpenSSL < 24.3.0 references
    # ``X509_V_FLAG_NOTIFY_POLICY`` at class-definition time, a constant removed
    # in OpenSSL 3.4 (present on older distros, GONE on current CI runners) — so
    # an unpinned resolve crashes on import there. 24.3.0 dropped the reference.
    "pyOpenSSL>=24.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["btagent_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "B904", "F841", "B007", "F401", "B905", "B017"]  # FastAPI Depends(), line length, reraise, unused vars

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
