[project]
name = "btagent-engine"
version = "0.1.0"
description = "BTagent workflow engine — Node ABC, runner, middleware, integrations"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.0",
    "pyyaml>=6.0.0",
    # Hunt Pack Runner (#112): Sigma -> multi-backend transpile
    # (btagent_engine.hunting.transpile; imported lazily). Pins match
    # agents/pyproject.toml.
    "pysigma>=0.11.0",
    "pysigma-backend-splunk>=1.0.0",
    "pysigma-backend-elasticsearch>=1.0.0",
    "pysigma-backend-kusto>=0.4.0",
    "pysigma-backend-crowdstrike>=1.0.0",
    "btagent-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["btagent_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "B904", "F841", "B007", "F401", "B905", "B017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
btagent-shared = { path = "../shared", editable = true }
