[project]
name = "btagent-shared"
version = "0.1.0"
description = "Shared types and utilities for BTagent"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.0",
    "python-ulid>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["btagent_shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "B904", "F841", "B007", "F401", "B905", "B017"]
